--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "libxmljs": "^0.19.7",
+    "libxmljs2": "^0.26.3",
     "nopt": "~2.1.0",
     "xml2js": "^0.4.19"
   },
